--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>ES6 変数宣言</h1>
     <ul>
 	<li><a href="src/0/index.html">var, let, const</a></li>
+	<li><a href="src/1/index.html">user strict NG</a></li>
+	<li><a href="src/2/index.html">user strict OK</a></li>
     </ul>
 </body>
 </html>
